* Update DB method * Remove Rabbi Name * Option to Press All the Div(not only Text) * Add lessons total

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -9,18 +9,19 @@
 <h2>יום שני</h2>
 <span>20:00-21:00 גמרא</span><br>
 <span> 21:00 ערבית</span><br>
-<span> 21:20 - 22:00 הלכות</span><br>
+<span> 21:30 - 22:00 הלכות</span><br>
 
 <h2>יום שלישי</h2>
-<span>20:30 - 22:00 פרקי אבות</span>
+<span>20:30 - 21:30 פרקי אבות</span><br>
+<span> 21:30 ערבית</span>
+
 
 <h2>יום רביעי</h2>
 <span>20:00-21:00 גמרא</span><br>
 <span> 21:00 ערבית</span><br>
-<span> 21:20 - 22:00 פרשת השבוע</span><br>
+<span> 21:30 - 22:00 פרשת השבוע</span><br>
 
 <br>
 <br>
 <br>
-<br>
-<h3>ליצירת קשר - הרב מרדכי סרודי - טלפון</h3>
+<h3> ליצירת קשר - הרב מרדכי סרודי - טלפון - 0548425464</h3>
