--- a/app/views/Application/avot.html
+++ b/app/views/Application/avot.html
@@ -19,12 +19,13 @@
 <div class="container" style="direction: rtl">
     <h2>פרקי אבות</h2>
     <div class="list-group">
+    <h4>(סה״כ שיעורים - ${lessons.size()})</h4>
+
     #{list items:lessons, as:'entry'}
-        <div class="list-group-item">
-            <span id=${entry.getRowId()} onclick="onRowClick(${entry.getRecordId()})">
+        <div class="list-group-item" onclick="onRowClick(${entry.getRecordId()})">
+            <span id=${entry.getRowId()} >
                 <span class="record_info">${entry.getName()}</span><br>
                 <span class="record_info">${entry.getDescription()}</span><br>
-                <span class="record_info">${entry.getRabbi()}</span><br>
                 <span class="record_info">${entry.getDateAdded()}</span><br>
             </span>
             <div id=${entry.getRecordId()} class="record">
@@ -37,28 +38,5 @@
         </div>
     #{/list}
     </div>
-
-*{<div class="table-responsive">}*
-*{<table class="table table-striped table-hover">}*
-
-*{<tbody>}*
-*{#{list items:lessons, as:'entry'}}*
-*{<tr id=${entry.getRowId()} onclick="onRowClick(${entry.getRecordId()})">}*
-*{<td>${entry.getName()}</td>}*
-*{<td>${entry.getDescription()}</td>}*
-*{</tr>}*
-*{<tr id=${entry.getRecordId()} class="record">}*
-*{<td>}*
-*{<audio controls controlsList="nofullscreen nodownload noremoteplayback">}*
-*{<source src=${entry.getPathToFile()}>}*
-*{Your browser does not support the audio element.}*
-*{</audio>}*
-*{</td>}*
-*{</tr>}*
-*{#{/list}}*
-*{</tbody>}*
-*{</table>}*
-*{</div>}*
 </div>
-
 </body>
