--- a/app/views/base.html
+++ b/app/views/base.html
@@ -18,11 +18,11 @@
     <div class="container-fluid">
         <ul class="nav navbar-nav">
             <li class="active"><a href="/">ראשי</a></li>
-            <li><a href="/halacha">הלכות</a></li>
-            <li><a href="/gmara">גמרא</a></li>
-            <li><a href="/avot">פרקי אבות</a></li>
-            <li><a href="/parasha">פרשת השבוע</a></li>
-            <li><a href="/moed">מועדים</a></li>
+            <li><a href="/lessons?type=halacha">הלכות</a></li>
+            <li><a href="/lessons?type=gmara">גמרא</a></li>
+            <li><a href="/lessons?type=avot">פרקי אבות</a></li>
+            <li><a href="/lessons?type=parasha">פרשת השבוע</a></li>
+            <li><a href="/lessons?type=moed">מועדים</a></li>
         </ul>
     </div>
 </nav>
