--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -4,19 +4,25 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 #{/set}
 
-<h1>לוח זמנים</h1>
+<h5 id="basad">בס״ד</h5>
+<br>
+<img src="/public/images/IMG_1382.jpg" height="60%" width="60%" />
 
-<h2>יום שני</h2>
+<h3>סה״כ שיעורים באתר - ${lessonsSize}</h3>
+
+<h2>לוח זמנים</h2>
+
+<h3>יום שני</h3>
 <span>20:00-21:00 גמרא</span><br>
 <span> 21:00 ערבית</span><br>
 <span> 21:30 - 22:00 הלכות</span><br>
 
-<h2>יום שלישי</h2>
+<h3>יום שלישי</h3>
 <span>20:30 - 21:30 פרקי אבות</span><br>
 <span> 21:30 ערבית</span>
 
 
-<h2>יום רביעי</h2>
+<h3>יום רביעי</h3>
 <span>20:00-21:00 גמרא</span><br>
 <span> 21:00 ערבית</span><br>
 <span> 21:30 - 22:00 פרשת השבוע</span><br>
@@ -25,3 +31,4 @@
 <br>
 <br>
 <h3> ליצירת קשר - הרב מרדכי סרודי - טלפון - 0548425464</h3>
+<h3> רח׳ היוצרים 2 כפר סבא</h3>
