changes to app - Adding Musar to Lesson Type - Supporting file name only in filePath - Adding friday lessons

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -28,6 +28,10 @@
 <span> 21:00 ערבית</span><br>
 <span> 21:30 - 22:00 פרשת השבוע</span><br>
 
+<h3>יום שישי</h3>
+<span> מוסר(חובת הללבות) 09:20 - 09:00  </span><br>
+<span> הלכות שבת בעיון 10:30 - 09:20  </span><br>
+
 <br>
 <br>
 <br>
