--- a/app/views/base.html
+++ b/app/views/base.html
@@ -20,6 +20,7 @@
             <li class="active"><a href="/">ראשי</a></li>
             <li><a href="/lessons?type=halacha">הלכות</a></li>
             <li><a href="/lessons?type=gmara">גמרא</a></li>
+            <li><a href="/lessons?type=musar">מוסר</a></li>
             <li><a href="/lessons?type=avot">פרקי אבות</a></li>
             <li><a href="/lessons?type=parasha">פרשת השבוע</a></li>
             <li><a href="/lessons?type=moed">מועדים</a></li>
