--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<meta name="google-site-verification" content="3oyKrSEX0haiu7HWOno-bgJrza3caZCWfoN2N0zffUo" />
 #{/set}
 
 <h5 id="basad">בס״ד</h5>
