add lesson page

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -9,9 +9,9 @@
 <br>
 <img src="/public/images/ahavat_aolam.png" height="20%" width="20%" />
 <img src="/public/images/HB.JPG" height="20%" width="20%" />
-<h3>סה״כ שיעורים באתר - ${lessonsSize}</h3>
 <img src="/public/images/IMG_1382.jpg" height="60%" width="60%" />
-<h3>בית מדרש ׳אהבת עולם׳ במרכז ׳חאן בבא׳ רחוב היוצרים 2 כפר סבא</h3>
+<h3>סה״כ שיעורים באתר - ${lessonsSize}</h3>
+<h4>בית מדרש אהבת עולם במרכז חאן בבא רחוב היוצרים 2 כפר סבא</h4>
 <h2>לוח זמנים</h2>
 
 <h3>יום שני</h3>
