--- a/app/views/Application/lessons.html
+++ b/app/views/Application/lessons.html
@@ -21,17 +21,17 @@
         <h4>(סה״כ שיעורים - ${lessons.size()})</h4>
 
     #{list items:lessons, as:'entry'}
-        <div class="list-group-item" onclick="onRowClick(${entry.getRecordId()})">
-            <span id=${entry.getRowId()} >
+        <div class="list-group-item">
+            <span id=${entry.getRowId()}>
                 <span class="record_info">${entry.getDescription()}</span><br>
                 <span class="record_info">${entry.getDateAdded()}</span><br>
             </span>
             <div id=${entry.getRecordId()} class="record">
                 <audio controls controlsList="nodownload noremoteplayback">
                     <source src=${entry.getPathToFile()}>
+                    אין תמיכה בדפדפן!
                     Your browser does not support the audio element.
                 </audio>
-
             </div>
         </div>
     #{/list}
